fix: update list by ko thurein

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -3,7 +3,8 @@
     width: 100px;
     height: 50px;
     /* background-color: #ffffff; */
-    border-radius: 5%;
+    border-radius: 8px;
+    object-fit: cover;
   }
 
   /* Navigation buttons */
@@ -32,8 +33,11 @@
 
   .header-language-flag {
     width: 24px;
-    height: 16px;
+    height: 24px;
     margin-right: 10px;
+    object-fit: contain;
+    border-radius: 50%;
+    background: #fff;
   }
 
   /* Mobile menu icon */
@@ -74,7 +78,7 @@
 
   /* Mobile Drawer (Sidebar) - List Item Text */
   .header-drawer .MuiListItemText-primary {
-    color: black; 
+    color: black;
     /* Default text color */
   }
 
@@ -92,8 +96,8 @@
     /* Hover text color */
   }
 
-  .css-h9njcz-MuiToolbar-root{
-    background-color: #00AC36 ;
+  .css-h9njcz-MuiToolbar-root {
+    background-color: #00AC36;
     color: white;
     padding: 0px 10px;
     height: 60px;
@@ -104,7 +108,7 @@
 
   .product-header-menu-container {
 
-        background-color: #00AC36;
+    background-color: #00AC36;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -115,7 +119,7 @@
   }
 
   .product-header-menu {
-    background-color: rgba(255,255,255,0.9);
+    background-color: rgba(255, 255, 255, 0.9);
     padding: 30px;
     width: 100%;
   }
