--- a/src/styles/contact_us.css
+++ b/src/styles/contact_us.css
@@ -1,79 +1,79 @@
 .contact-container {
-    max-width: 1200px;
-    margin: auto;
-    padding: 20px;
-    text-align: center;
-  }
-  
-  .contact-header h2 {
-    font-size: 2rem;
-    color: #555555;
-  }
-  
-  .contact-header p {
-    color: #555555;
-  }
-  
-  .contact-content {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    margin-top: 30px;
-  }
-  
-  .contact-info,
-  .contact-form {
-    flex: 1;
-    min-width: 300px;
-    padding: 20px;
-    align-content: center;
-  }
-  
-  .contact-info h3,
-  .contact-form h3,
-  .contact-map h3 {
-    color: #555555;
-  }
-  
-  .contact-info p {
-    color: #555555;
-    margin: 10px 0;
-  }
-  
-  .contact-form form {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .contact-form input,
-  .contact-form textarea {
-    width: 100%;
-    padding: 10px;
-    margin: 10px 0;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-  }
-  
-  .contact-form button {
-    padding: 10px;
-    background: #00AC36;
-    color: white;
-    border: none;
-    cursor: pointer;
-    transition: 0.3s;
-  }
-  
-  .contact-form button:hover {
-    background: #0056b3;
-  }
-  
-  .contact-map {
-    margin-top: 30px;
-  }
-  
-  .contact-map iframe {
-    width: 100%;
-    height: 300px;
-    border-radius: 10px;
-  }
-  
+  max-width: 1200px;
+  margin: auto;
+  padding: 20px;
+  text-align: center;
+}
+
+.contact-header h2 {
+  font-size: 2rem;
+  color: #555555;
+}
+
+.contact-header p {
+  color: #555555;
+}
+
+.contact-content {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-top: 30px;
+}
+
+.contact-info,
+.contact-form {
+  flex: 1;
+  min-width: 300px;
+  padding: 20px;
+  align-content: center;
+}
+
+.contact-info h3,
+.contact-form h3,
+.contact-map h3 {
+  color: #555555;
+}
+
+.contact-info p {
+  color: #555555;
+  margin: 10px 0;
+}
+
+.contact-form form {
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 4px;
+}
+
+.contact-form input,
+.contact-form textarea {
+  width: 100%;
+  padding: 10px;
+  margin: 10px 0;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.contact-form button {
+  padding: 10px;
+  background: #00AC36;
+  color: white;
+  border: none;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.contact-form button:hover {
+  background: #0056b3;
+}
+
+.contact-map {
+  margin-top: 30px;
+}
+
+.contact-map iframe {
+  width: 100%;
+  height: 300px;
+  border-radius: 10px;
+}
