--- a/src/styles/trophy.css
+++ b/src/styles/trophy.css
@@ -97,6 +97,7 @@ body {
   border-radius: 8px;
   text-align: center;
   padding: 5px;
+  border: 1px solid #d9d9d9;
 }
 
 /* Full-Height Certificate Image */
