--- a/src/styles/Home_Body_Layout.css
+++ b/src/styles/Home_Body_Layout.css
@@ -38,24 +38,31 @@
   from {
     transform: translateX(100%);
   }
+
   to {
-    transform:translateX(0);
+    transform: translateX(0);
   }
-  
-}   
+
+}
+
 .info-card {
+  transition-property: transform;
+  transition-duration: 500ms;
   background-color: white;
   color: black;
   padding: 10px;
-  flex: 1 1 calc(25% - 20px); /* Responsive: 4 cards per row with gap */
+  flex: 1 1 calc(25% - 20px);
+  /* Responsive: 4 cards per row with gap */
   max-width: 250px;
   border-radius: 10px;
-  
-  box-shadow: 0 2px 1px #00AC36;
+
+  box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.1),
+    0px 3px 1px -2px rgba(0, 0, 0, 0.1),
+    0px 1px 5px 0px rgba(0, 0, 0, 0.1);
   overflow: hidden;
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
   animation: SlideIn 10s ease-out;
-  
+  border: 1px solid #e0e0e0;
 }
 
 .info-card:hover {
@@ -78,31 +85,35 @@
 /* ✅ Responsive breakpoints */
 @media (max-width: 1024px) {
   .info-card {
-    flex: 1 1 calc(33.33% - 20px); /* 3 cards per row */
+    flex: 1 1 calc(33.33% - 20px);
+    /* 3 cards per row */
   }
 }
 
 @media (max-width: 768px) {
   .info-card {
-    flex: 1 1 calc(50% - 20px); /* 2 cards per row */
+    flex: 1 1 calc(50% - 20px);
+    /* 2 cards per row */
   }
 }
 
 @media (max-width: 480px) {
   .info-card {
-    flex: 1 1 100%; /* 1 card per row */
+    flex: 1 1 100%;
+    /* 1 card per row */
   }
+
   .headline .maintext {
-  font-family: 'Poppins', sans-serif;
-  font-size: clamp(1rem, 1.5vw, 1rem);
-  font-weight: 800;
-  color: #000000;
-  animation: zoomIn 1.5s ease-out;
-  text-align: center;
-  padding-left: 1rem;
-  margin-top: 20px;
-  margin-bottom: 20px;
-}
+    font-family: 'Poppins', sans-serif;
+    font-size: clamp(1rem, 1.5vw, 1rem);
+    font-weight: 800;
+    color: #000000;
+    animation: zoomIn 1.5s ease-out;
+    text-align: center;
+    padding-left: 1rem;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
 
   .card-image {
     width: 60%;
